feat(MSHOP-100): Updated swagger docs
